--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^30.2.1",
     "ag-grid-react": "^30.2.1",
-    "firebase": "^10.7.1",
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
